@@ -21,9 +21,9 @@
  * @author Oliver Klee <typo3-coding@oliverklee.de>
  * @author Niels Pardon <mail@niels-pardon.de>
  */
-class tx_seminars_FrontEnd_CategoryListTest extends Tx_Phpunit_TestCase {
+class Tx_Seminars_FrontEnd_CategoryListTest extends Tx_Phpunit_TestCase {
 	/**
-	 * @var tx_seminars_FrontEnd_CategoryList
+	 * @var Tx_Seminars_FrontEnd_CategoryList
 	 */
 	private $fixture;
 
@@ -57,7 +57,7 @@ class tx_seminars_FrontEnd_CategoryListTest extends Tx_Phpunit_TestCase {
 			)
 		);
 
-		$this->fixture = new tx_seminars_FrontEnd_CategoryList(
+		$this->fixture = new Tx_Seminars_FrontEnd_CategoryList(
 			array(
 				'isStaticTemplateLoaded' => 1,
 				'templateFile' => 'EXT:seminars/Resources/Private/Templates/FrontEnd/FrontEnd.html',
